In progress - O git é um bocado chato, mas pronto. Vamos, equipa!